Update Spin the wheel - Pengaturan Mekanisme 96,5%. FT#CDE-4968-Spin-The-Wheel

--- a/src/app/pages/dte/spin-the-wheel/edit/spin-the-wheel-edit.component.html
+++ b/src/app/pages/dte/spin-the-wheel/edit/spin-the-wheel-edit.component.html
@@ -599,7 +599,7 @@
                 <p fxFlex="15">Limit Spin</p>
                 <div fxFlex="1"></div>
                 <mat-form-field fxFlex class="is-light form-primary" fxFlex="20">
-                  <input matInput type="number" placeholder="" formControlName="limit_spin"
+                  <input matInput currencyMask type="tel" placeholder="" formControlName="limit_spin"
                     name="limit_spin" (change)="calculatePM($event)" (keyup)="calculatePM($event)">
                 </mat-form-field>
                 <div fxFlex="2"></div>
